# remotty

./: .gitignore  Cargo.toml  README.ja.md  README.md  bridge.toml  package.json
.github/workflows/: ci.yml  gitleaks.yml  release.yml
docs/: development.ja.md  development.md  exec-transport.ja.md  exec-transport.md  fakechat-demo.ja.md  fakechat-demo.md  remote-companion.ja.md  remote-companion.md  telegram-quickstart.ja.md  telegram-quickstart.md  upgrading.ja.md  upgrading.md
plugins/remotty/: README.md
plugins/remotty/.codex-plugin/: plugin.json
plugins/remotty/commands/: remotty-access-pair.md  remotty-configure.md  remotty-fakechat-demo.md  remotty-live-env-check.md  remotty-pair.md  remotty-policy-allowlist.md  remotty-sessions.md  remotty-smoke-approval-accept.md  remotty-smoke-approval-decline.md  remotty-start.md  remotty-status.md  remotty-stop.md
plugins/remotty/skills/remotty-access-pair/: SKILL.md
plugins/remotty/skills/remotty-configure/: SKILL.md
plugins/remotty/skills/remotty-live-env-check/: SKILL.md
plugins/remotty/skills/remotty-policy-allowlist/: SKILL.md
plugins/remotty/skills/remotty-sessions/: SKILL.md
plugins/remotty/skills/remotty-start/: SKILL.md
plugins/remotty/skills/remotty-status/: SKILL.md
scripts/: audit-doc-terminology.ps1  audit-public-surface.ps1  audit-release-coverage.ps1  audit-secret-surface.ps1  backfill-releases.ps1  bump-version.ps1  generate-release-notes.ps1  planning-paths.ps1  release-common.ps1  release-history.psd1  release-required.psd1  setup-planning.ps1  sync-roadmap.ps1
src/: app_server.rs  checks.rs  cli.rs  codex.rs  config.rs  config_workspace.rs  demo_fakechat.rs  engine.rs  lib.rs  live_smoke.rs  main.rs  service.rs  store.rs  telegram.rs  telegram_cli.rs  telegram_poller_guard.rs  windows_secret.rs
tasks/: README.md  ROADMAP.example.md  backlog.example.yaml  roadmap-title-ja.example.psd1
tests/: checks_runner.rs  live_approval_end_to_end.rs  live_end_to_end.rs  public_surface.rs  release_automation.rs  roadmap_sync.rs  telegram_fake_server.rs
(+2 files in other folders)
