[package]
name = "remotty"
version = "0.1.15"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rpassword = "7"
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "signal"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
windows-service = "0.8"
service-manager = "0.11"
zeroize = "1"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_Memory",
  "Win32_System_Threading",
]

[dev-dependencies]
axum = "0.8"
serial_test = "3"
